--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 }
 
 body {
-  background-color: #212121;
-  color: #E4E4E4;
+  background-color: #f3f3f3;
+  color: #1a1a1a;
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
 }
