change styling for input and create main wrapper for all project

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,23 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-wrapper {
+  width: 90vw;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #e0dfdf;
+  margin: 10px 0;
+  padding: 0;
+}
