--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,5 +1,7 @@
 .card {
-	padding: 30px;
+	padding: 10px;
 	background-color: #eeeeee;
 	border-radius: 10px;
+	font-size: 14px;
+	line-height: 1.8;
 }
